# common-design-template

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
CBase/CPP/1basic/: CMakeLists.txt  main.cpp
CBase/CPP/1basic/lib/: Student.cpp  User.cpp  User.h  car.cpp  car.h
CBase/CPP/2OOP/: CMakeLists.txt  FriendlyClass.cpp  Inherite.cpp  ObjectArray.cpp  OperatorOverride.cpp  ThisForLinkedExecute.cpp
CBase/CPP/3exception/: CMakeLists.txt  constraintTemplate.cpp  main.cpp  template.cpp
CBase/CPP/4datastructure/: AVLTree.cpp  CMakeLists.txt
CBase/CPP/5cmake_template/: CMakeLists.txt  main.cpp
CBase/CPP/5cmake_template/include/: Demo.h
CBase/CPP/5cmake_template/src/: CMakeLists.txt  Demo.cpp
CBase/CPP/6gtest/: CMakeLists.txt  main.cpp
CBase/CPP/6gtest/src/: lib.cpp  lib.hpp
CBase/CPP/6gtest/tests/: CMakeLists.txt  testMain.cpp
CBase/CPP/6gtest_template/: CMakeLists.txt  README.md  main.cpp
CBase/CPP/6gtest_template/src/: CMakeLists.txt  MyMath.cpp  MyMath.hpp
CBase/CPP/6gtest_template/test/: CMakeLists.txt  TestAdd.cpp
CBase/CPP/7ld_preload/: CMakeLists.txt
CBase/CPP/8cpp_best_practice/: CMakeLists.txt  main.cpp
CBase/CPP/8cpp_best_practice/src/: Constexpr.hpp
CBase/CPP/8cpp_best_practice/tests/: CMakeLists.txt  bestpractice.cpp
CBase/DataStructure/Array/ArrayBasic/: CMakeLists.txt  arrayWithFunction.cxx  arraycopy.cpp  stringArray.cpp  test.cpp
CBase/DataStructure/Array/FreeableArray/: CMakeLists.txt  memory_block_array.c  same_page_malloc.c  test.cpp
CBase/DataStructure/Array/pointerBasic/: CMakeLists.txt  mallocPointer.cpp  myString.cpp  noPointerPointer.cpp  pointer_pointer_for_char_pointer.cpp  pointer_pointer_to_linked_list.cpp
CBase/DataStructure/error_handle/: test.cpp
CBase/DataStructure/file/: CMakeLists.txt  readEOF.cpp  test.cpp
CBase/DataStructure/overflow/: goto.cpp  test.cpp
CBase/DataStructure/stdin_stdout/: overflow_attach.cpp  test.cpp
CBase/DataStructure/structure/: test.cpp
CBase/DataStructure/tree_postorder_traversal/: CMakeLists.txt  main.cpp
algorithm/Find the duplicate element in a limited range array/: main.cpp
algorithm/Find the index of 0 to be replaced to get the maximum length sequence of continuous ones/: main.cpp
algorithm/In-place merge two sorted arrays/: main.cpp
algorithm/Merge two arrays by satisfying given constraints/: main.cpp
algorithm/Move all zeros present in an array to the end/: main.cpp
algorithm/Print all subarrays with 0 sum/: main.cpp
algorithm/sort 0, 1, 2/: CMakeLists.txt  main.cpp
apps/data-binding/: build.gradle  readme.md
apps/data-binding/src/androidTest/java/com/example/data_binding/: ExampleInstrumentedTest.kt
apps/data-binding/src/main/: AndroidManifest.xml
apps/data-binding/src/main/java/com/example/data_binding/: MainActivity.kt  MyViewModel.kt
apps/data-binding/src/main/res/layout/: activity_main.xml
apps/data-binding/src/main/res/values/: themes.xml
apps/data-binding/src/main/res/values-night/: themes.xml
assemblyscript/1trace/: asc.json  package-lock.json  package.json  run.cjs  simd.ts
assemblyscript/1trace/assembly/: index.ts  index.ts.bak
handshake-dialect-handler/src/main/java/com/jesse/example/: ADialect.java  ADialectHandshakeHandler.java  BDialect.java  BDialectHandshakeHandler.java  Dialect.java  HandshakeResult.java  TestMain.java
handshake-dialect-handler/src/main/java/com/jesse/example/multidialect/: ADialect.java  ADialectHandshakeHandler.java  BDialect.java  BDialectHandshakeHandler.java  Dialect.java  HandshakeResult.java  TestMain.java
locker/src/main/kotlin/com/jesse/example/locker/: LockerLockDemo.kt  SynchronizedLockerDemo.kt
nio/nio-file-channel/: build.gradle
nio/nio-file-channel/src/main/kotlin/: FileNIOTestMain.kt
nio/nio-socket-channel/src/main/kotlin/com/jesse/example/nio/socket/: NoBlockSocketPractice.kt  SocketMain.kt
